feat(backend): replace ES BulkRequest with interface BatchRequest  (#4702)
* feat(backend): add Transaction and OperationStore

* feat(backend): replace BulkRequest with Transaction in ZeebeRecordProcessors

Related with #4617

* feat(backend): replace BulkRequest with Transaction in MetricWriter

Related with #4617

* fix(backend-test): use Transaction in test

Related with #4617

* feat(backend): clean up

Related with #4617

* feat(backend): remove ELS usage from ListViewZeebeRecordProcessor

Related with #4617

* feat(backend): remove ELS usage from ListViewZeebeRecordProcessor

Related with #4617

* fix(backend): rename ActivityStore to FlowNodeStore

* fix(backend): use single request for update in OperationsManager

- Only when transaction is not used

* fix(backend): transaction::execute returns nothing to signal the transaction is over

* fix(backend-test): rewrite MetricWriterTest

* feat(backend): rename Transaction to BatchRequest

* fix indention

Related with #4617